<resources>
    <string name="app_name">Sai Vision</string>
    <string name="user_name">User Name</string>
    <string name="alpha_numeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="id">ID</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="no_user_found">No user Found\nGo Back and change the filter</string>
    <string name="amount">Amount</string>
    <string name="pay">Pay</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="address_lane_1">Address Lane 1</string>
    <string name="address_lane_2">Address Lane 2</string>
    <string name="registration_amount">Registration Amount</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="submit">Submit</string>
    <string name="empty_field">This Field Cannot be empty</string>
    <string name="oops">Oops…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="userName">user_name</string>
    <string name="invalid_credentials">Invalid user name or password</string>
    <string name="warning">Warning!!!</string>
    <string name="all_fields_empty">Give at least one input for filter</string>
    <string name="no_users_found">No Users found with your query</string>
    <string name="customer_listing">Customer Listing</string>
    <string name="add_customer">Add Customer</string>
    <string name="cheque_number">Cheque Number</string>
    <string name="cheque">Cheque</string>
    <string name="cash">Cash</string>
    <string name="success">Success</string>
    <string name="invalid_mobile">Please enter a valid mobile number</string>
    <string name="invalid_email">Please give a valid email address</string>
    <string name="select_group">Please select a Group</string>
    <string name="select_gender">Please select a Gender</string>
    <string name="no_connection">No Connection</string>
    <string name="check_internet_connection">Kindly Check your internet connection and try again.</string>
    <string name="box_no">Box No</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="well_done">Well done!</string>
    <string name="sync_data">Sync Data</string>
    <string name="offline_payment">Offline Payment</string>
    <string name="please_wait_syncing_all_your_data">Please wait, Syncing all your data…</string>
    <string name="offline">Offline</string>
    <string name="added_to_the_database">Data Added to the Database</string>
</resources>
