<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_person"
        android:title="@string/add_customer"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync_data"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_offline_payment"
        android:icon="@drawable/ic_feedback"
        android:title="@string/offline_payment"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>