<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saivision.collection.view.UserDetailsActivity">

    <RadioGroup
        android:id="@+id/rg_payment_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:checked="true"
            android:gravity="center"
            android:text="@string/cash" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_cheque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cheque" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_box_no"
            style="@style/AppTheme.EditText"
            android:hint="@string/id"
            android:inputType="number"
            tools:text="111" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_amount"
            style="@style/AppTheme.EditText"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            tools:text="aaa" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_cheque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_cheque"
            style="@style/AppTheme.EditText"
            android:hint="@string/cheque_number"
            android:inputType="number"
            tools:text="aaa" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_box_no"
        style="@style/AppTheme.TextView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:text="21" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/AppTheme.TextView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        tools:text="Vishwajit Palankar" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/AppTheme.TextView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:text="106 akashdeep, khadki, Pune 411003" />

    <TextView
        android:id="@+id/tv_last_payment_date"
        style="@style/AppTheme.TextView"
        tools:text="26/08/2016" />


    <Button
        android:id="@+id/btn_pay"
        style="@style/AppTheme.MyButtons"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:text="@string/pay" />
</LinearLayout>
