<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.AddCustomerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_box_no"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/box_no"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_first_name"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_last_name"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone_number"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/min_padding_margin"
                android:paddingTop="@dimen/min_padding_margin">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:text="Male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Female" />
            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_registration_amount"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/registration_amount"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/min_padding_margin"
                android:layout_marginTop="@dimen/min_padding_margin"
                android:paddingBottom="@dimen/min_padding_margin"
                android:paddingTop="@dimen/min_padding_margin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/min_padding_margin"
                android:layout_marginTop="@dimen/min_padding_margin"
                android:background="@android:color/darker_gray" />

            <TextView
                style="@style/AppTheme.TextView"
                android:layout_marginBottom="@dimen/min_padding_margin"
                android:layout_marginTop="@dimen/min_padding_margin"
                android:text="@string/address"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_apt_name"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/apartment_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address_lane1"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/address_lane_1"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address_lane2"
                    style="@style/AppTheme.EditText"
                    android:hint="@string/address_lane_2"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                style="@style/AppTheme.MyButtons"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
